-adding, new class Pracownicy and more

--- a/src/main/resources/templates/admin/main_admin.html
+++ b/src/main/resources/templates/admin/main_admin.html
@@ -6,7 +6,7 @@
 
     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.3/css/bootstrap.min.css} "/>
     <link th:rel="stylesheet" th:href="@{https://use.fontawesome.com/releases/v5.14.0/css/all.css}" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
-    <link th:rel="stylesheet" th:href="@{/css/main_user.css}"/>
+    <link th:rel="stylesheet" th:href="@{/css/styles.css}"/>
 
 
 </head>
@@ -20,6 +20,7 @@
             <a th:href="@{/nasze_zawody}" class="btn btn-dark btn-sm">Nasze zawody</a>
             <a th:href="@{/trenerzy}" class="btn btn-dark btn-sm">Trenerzy i sekcje</a>
             <a th:href="@{/zawodnicy}" class="btn btn-dark btn-sm">Zawodnicy</a>
+            <a th:href="@{/pracownicy}" class="btn btn-dark btn-sm">Pracownicy</a>
         </div>
     </div>
     <button class="btn btn-primary navbar-brand ml-auto" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -33,17 +34,7 @@
     </form>
 </nav>
 
-<div class="container">
-    <div class="row">
-
-        <div class="col-md-10 mt-5">
-            <form method="post" th:action="@{/index}">
-
-            </form>
-        </div>
-
-    </div>
-</div>
+<h1>WITAJ NA STRONIE ADMINA</h1>
 
 <!-- footstop -->
 <div class="footer flx">
