--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,13 +5,13 @@
     <title>Klub Lekkoatletyczny</title>
 
     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.3/css/bootstrap.min.css} "/>
-    <link th:rel="stylesheet" th:href="@{/css/main_user.css}"/>
+    <link th:rel="stylesheet" th:href="@{/css/styles.css}"/>
     <link th:rel="stylesheet" th:href="@{https://use.fontawesome.com/releases/v6.2.1/css/all.css}" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
 
 
 </head>
 
-<body th:style="'background: url(https://wallpapercave.com/wp/wp2089569.jpg) no-repeat center center fixed;'">
+<body th:style="'background: url(https://wallpapercave.com/wp/wp2089569.jpg) no-repeat center center fixed; '">
 
 
 
@@ -31,6 +31,9 @@
                 </li>
                 <li class="nav-item">
                     <a th:href="@{/zawodnicy}" class="nav-link">Zawodnicy</a>
+                </li>
+                <li class="nav-item">
+                    <a th:href="@{/pracownicy}" class="nav-link">Pracownicy</a>
                 </li>
             </ul>
         </div>
