--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -113,6 +113,15 @@
 }
 
 input{
-width: 75px;
+width: 100%;
+}
+
+.editForm{
+    display: none;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
