--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
     <title>Strona Logowania</title>
 
     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.3/css/bootstrap.min.css} "/>
-    <link th:rel="stylesheet" th:href="@{/css/main_user.css}">
+    <link th:rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body th:style="'background: url(https://wallpapercave.com/wp/wp2089569.jpg) no-repeat center center fixed;'">
 
@@ -22,7 +22,7 @@
 
                         <div class="form-group mb-4">
                             <label for="login" style="color: aliceblue">Login:</label>
-                            <input id="login" type="text" placeholder="Podaj login" autocomplete="off" class="form-control form-control-lg" name="username" required/>
+                            <input id="login" type="text" placeholder="Podaj login" autocomplete="off" class="form-control form-control-lg" name="username" required autofocus/>
                         </div>
 
                         <div class="form-group mb-4">
