--- a/src/main/resources/templates/user/main_user.html
+++ b/src/main/resources/templates/user/main_user.html
@@ -5,7 +5,7 @@
     <title>Main User Page</title>
 
     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.3/css/bootstrap.min.css} "/>
-    <link rel="stylesheet" th:href="@{/css/main_user.css}" />
+    <link rel="stylesheet" th:href="@{/css/styles.css}" />
     <link th:rel="stylesheet" th:href="@{https://use.fontawesome.com/releases/v5.14.0/css/all.css}" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
 
 
